--- a/dataviz-react/src/index.css
+++ b/dataviz-react/src/index.css
@@ -14,12 +14,12 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.hide-scrollbar::-webkit-scrollbar {
+.scrollbar-hidden::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.hide-scrollbar {
+.scrollbar-hidden {
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
